docs/7.52/md/abensxml_parsing_methods_abexa.md
---
title: "Source Code"
description: |
  REPORT demo_sxml_token_reader_methods. CLASS sxml_demo DEFINITION. PUBLIC SECTION. CLASS-METHODS main. PRIVATE SECTION. CLASS-METHODS get_node_type IMPORTING node_type_int TYPE if_sxml_node=>node_type RETURNING value(node_type_string) TYPE string. ENDCLASS. CLASS sxml_demo IMPLEMENTAT
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abensxml_parsing_methods_abexa.htm"
abapFile: "abensxml_parsing_methods_abexa.htm"
keywords: ["select", "loop", "do", "if", "case", "try", "catch", "method", "class", "data", "abensxml", "parsing", "methods", "abexa"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) →  [Class Libraries for XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_libs.htm) →  [sXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sxml_lib.htm) →  [sXML Library, Examples](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sxml_lib_abexas.htm) → 

sXML Library, Methods for Token-Based Parsing

This example demonstrates how various methods are used in [token-based parsing](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sxml_lib_parse_iterative.htm).

Source Code

REPORT demo\_sxml\_token\_reader\_methods.
CLASS sxml\_demo DEFINITION.
  PUBLIC SECTION.
    CLASS-METHODS main.
  PRIVATE SECTION.
    CLASS-METHODS get\_node\_type
      IMPORTING node\_type\_int TYPE if\_sxml\_node=>node\_type
      RETURNING value(node\_type\_string) TYPE string.
ENDCLASS.
CLASS sxml\_demo IMPLEMENTATION.
  METHOD main.
    DATA(out) = cl\_demo\_output=>new( )->begin\_section( \`XML-Data\` ).
    DATA(xml) = cl\_abap\_codepage=>convert\_to(
     \`<?xml version="1.0"?>\` &&
     \`<items>\` &&
     \`<item1 a1="11" b1="12" c1="13">1</item1>\`  &&
     \`<item2 a2="21" b2="22" c2="23">2</item2>\`  &&
     \`<item3 a3="31" b3="32" c3="33"><subItems>\` &&
     \`<subItem1>31</subItem1>\` &&
     \`<subItem2>32</subItem2>\` &&
     \`<subItem3>33</subItem3>\` &&
     \`</subItems></item3>\` &&
     \`<item4 a4="AA==" b4="AQ==" c4="Ag==">4</item4>\` &&
     \`</items>\` ).
    out->write\_xml( xml ).
    "Parsing all nodes
    out->next\_section(
      \`Parsing all Nodes of the XML-Data\` ).
    DATA: BEGIN OF node,
            node\_type  TYPE string,
            name       TYPE string,
            value      TYPE string,
          END OF node,
          nodes LIKE TABLE OF node.
    DATA(reader) = cl\_sxml\_string\_reader=>create( xml ).
    TRY.
        DO.
          reader->next\_node( ).
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_final.
            EXIT.
          ENDIF.
          APPEND VALUE #(
            node\_type  = get\_node\_type( reader->node\_type )
            name       = reader->name
            value      = reader->value ) TO nodes.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_open.
            DO.
              reader->next\_attribute( ).
              IF reader->node\_type <> if\_sxml\_node=>co\_nt\_attribute.
                EXIT.
              ENDIF.
              APPEND VALUE #(
                node\_type  = \`attribute\`
                name       = reader->name
                value      = reader->value ) TO nodes.
            ENDDO.
          ENDIF.
        ENDDO.
      CATCH cx\_sxml\_parse\_error INTO DATA(parse\_error).
        out->write\_text( parse\_error->get\_text( ) ).
    ENDTRY.
    out->write\_data( nodes ).
    "Push back node
    out->next\_section( \`Push Back one Node\` ).
    reader = cl\_sxml\_string\_reader=>create( xml ).
    TRY.
        DO.
          reader->next\_node( ).
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_final.
            EXIT.
          ENDIF.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_value AND
             reader->value = 2.
            reader->push\_back( ).
            DO.
              reader->next\_attribute( ).
              IF reader->node\_type <> if\_sxml\_node=>co\_nt\_attribute.
                EXIT.
              ENDIF.
              out->write(
                       |{ reader->name } { reader->value }| ).
            ENDDO.
            reader->next\_node( ).
          ENDIF.
        ENDDO.
      CATCH cx\_sxml\_parse\_error INTO parse\_error.
        out->write\_text( parse\_error->get\_text( ) ).
    ENDTRY.
    "Handling attributes
    out->next\_section( \`Handling Attributes\` ).
    reader = cl\_sxml\_string\_reader=>create( xml ).
    TRY.
        DO.
          reader->next\_node( ).
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_final.
            EXIT.
          ENDIF.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_open.
            IF reader->name = 'item2'.
              reader->get\_attribute\_value( 'b2' ).
              out->begin\_section( \`Query one Attribute\`
                )->write( |{ reader->name } { reader->value }|
                )->end\_section( ).
            ENDIF.
            DO.
              reader->next\_attribute( ).
              IF reader->node\_type <> if\_sxml\_node=>co\_nt\_attribute.
                EXIT.
              ENDIF.
              IF reader->value = '33'.
                out->begin\_section( \`Reset Node\` ).
                reader->current\_node( ).
                DO.
                  reader->next\_attribute( ).
                  IF reader->node\_type <> if\_sxml\_node=>co\_nt\_attribute.
                    EXIT.
                  ENDIF.
                  out->write( |{ reader->name } { reader->value }| ).
                ENDDO.
                out->end\_section( ).
                EXIT.
              ENDIF.
              IF reader->name = 'a4'.
                out->begin\_section( \`Reading Raw Values\` ).
              ENDIF.
              TRY.
                  reader->next\_attribute\_value(
                    if\_sxml\_value=>co\_vt\_raw ).
                  out->write( |{ reader->name
                             } { reader->value
                             } { reader->value\_raw }| ).
                CATCH cx\_sxml\_parse\_error INTO parse\_error.
                  CONTINUE.
              ENDTRY.
            ENDDO.
          ENDIF.
        ENDDO.
      CATCH cx\_sxml\_parse\_error INTO parse\_error.
        out->write\_text( parse\_error->get\_text( ) ).
    ENDTRY.
    "Skip node
    out->next\_section( \`Skipping a Node and Getting the Subtree\` ).
    reader = cl\_sxml\_string\_reader=>create( xml ).
    DATA(writer) = CAST if\_sxml\_writer(
      cl\_sxml\_string\_writer=>create(  ) ).
    DATA level TYPE i.
    TRY.
        DO.
          reader->next\_node( ).
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_final.
            EXIT.
          ENDIF.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_open.
            level = level + 1.
          ELSEIF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_close.
            level = level - 1.
          ENDIF.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_open AND
             level > 2.
            reader->skip\_node( writer ).
            level = level - 1.
          ENDIF.
        ENDDO.
      CATCH cx\_sxml\_parse\_error INTO parse\_error.
        out->write\_text( parse\_error->get\_text( ) ).
    ENDTRY.
    DATA(xml\_sub) =
       CAST cl\_sxml\_string\_writer( writer )->get\_output(  ).
    out->write\_xml( xml\_sub ).
    "Skip node
    out->next\_section( \`Skipping a Node and Getting the Subelements\` ).
    reader = cl\_sxml\_string\_reader=>create( xml ).
    writer = CAST if\_sxml\_writer(
      cl\_sxml\_string\_writer=>create(  ) ).
    writer->open\_element( name = 'subElements' ).
    CLEAR level.
    TRY.
        DO.
          reader->next\_node( ).
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_final.
            EXIT.
          ENDIF.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_open.
            level = level + 1.
          ELSEIF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_close.
            level = level - 1.
          ENDIF.
          IF reader->node\_type = if\_sxml\_node=>co\_nt\_element\_open AND
             level > 3.
            reader->skip\_node( writer ).
            level = level - 1.
          ENDIF.
        ENDDO.
      CATCH cx\_sxml\_parse\_error INTO parse\_error.
        out->write\_text( parse\_error->get\_text( ) ).
    ENDTRY.
    writer->close\_element( ).
    xml\_sub =
       CAST cl\_sxml\_string\_writer( writer )->get\_output(  ).
    out->write\_xml( xml\_sub ).
    out->display( ).
  ENDMETHOD.
  METHOD get\_node\_type.
    CASE node\_type\_int.
      WHEN if\_sxml\_node=>co\_nt\_initial.
        node\_type\_string = \`CO\_NT\_INITIAL\`.
\*      WHEN if\_sxml\_node=>co\_nt\_comment.
\*        node\_type\_string = \`CO\_NT\_COMMENT\`.
      WHEN if\_sxml\_node=>co\_nt\_element\_open.
        node\_type\_string = \`CO\_NT\_ELEMENT\_OPEN\`.
      WHEN if\_sxml\_node=>co\_nt\_element\_close.
        node\_type\_string = \`CO\_NT\_ELEMENT\_CLOSE\`.
      WHEN if\_sxml\_node=>co\_nt\_value.
        node\_type\_string = \`CO\_NT\_VALUE\`.
      WHEN if\_sxml\_node=>co\_nt\_attribute.
        node\_type\_string = \`CO\_NT\_ATTRIBUTE\`.
\*      WHEN if\_sxml\_node=>co\_nt\_pi.
\*        node\_type\_string = \`CO\_NT\_FINAL\`.
      WHEN OTHERS.
        node\_type\_string = \`Error\`.
    ENDCASE.
  ENDMETHOD.
ENDCLASS.
START-OF-SELECTION.
  sxml\_demo=>main( ).

Description

A string of XML data is parsed more than once:

-   In the first parsing, all data is read, as usual, in a nested loop using the methods NEXT\_NODE and NEXT\_ATTRIBUTES.

-   In the second parsing, the method PUSH\_BACK is used to move the parser back to the opened element for each value node with a specific value and to read the attributes here.

-   The third parsing demonstrates various ways of reading XML data.

-   First, a specific attribute is read for an element with a specific name using GET\_ATTRIBUTE\_VALUE.

-   Then an iteration runs across all attributes of all elements (without evaluating the elements) until a specific value occurs. If the value occurs, the method CURRENT\_NODE is used to move the parser to the start of the current attribute list and the list is evaluated.

-   Finally, the method NEXT\_ATTRIBUTE\_VALUE is used to read the value of each attribute as raw data saved in [Base64](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbase64_glosry.htm "Glossary Entry") format. The data is displayed only if this is successful.

-   In the fourth and fifth parsings, the method SKIP\_NODE demonstrates why the hierarchy level of the current node is saved in the helper variable level.

-   In the first case, the opened element of subitems is exited using SKIP\_NODE. The full subtree introduced using subitems is parsed and moved to an XML writer. The results are then displayed.

-   In the second case, the opened elements of all subelements of subitems are exited. They are parsed and their content is moved to an XML writer. These elements are located at the same level, which means the associated opened element and the closed element must added to the writer explicitly.